Rearrange style attributes
Signed-off-by: Ino Gamalinda <ino@gamalinda.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,10 +46,10 @@
             android:id="@+id/profileImage"
             android:layout_width="@dimen/profile_big_size"
             android:layout_height="@dimen/profile_big_size"
-            android:background="#FF0055"
-            android:layout_marginLeft="@dimen/profile_image_margin_max"
             android:layout_marginBottom="@dimen/profile_image_margin_max"
+            android:layout_marginLeft="@dimen/profile_image_margin_max"
             android:layout_marginRight="@dimen/profile_image_margin_max"
+            android:background="#FF0055"
             android:contentDescription="@string/test_profile_image_desc"
             android:src="@android:drawable/ic_dialog_dialer" />
 
@@ -83,12 +83,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:textStyle="bold"
                 android:drawableLeft="@mipmap/coin"
-                android:paddingBottom="@dimen/profile_misc_padding"
                 android:drawablePadding="2sp"
+                android:paddingBottom="@dimen/profile_misc_padding"
                 android:text="@string/test_profile_misc_title"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
 
