--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,11 +35,13 @@
     <include layout="@layout/content_main" />
 
     <com.gamalinda.android.poc.testing.collapsingtoolbar.view.CollapsingProfileHeaderView
-        app:profileName="Ino Gamalinda"
-        app:profileSubtitle="ino.gamalinda"
-        app:profileMisc="1234567890"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
-        app:layout_behavior="@string/collapsing_profile_behavior" />
+        app:layout_behavior="@string/collapsing_profile_behavior"
+        app:profileImage="@android:drawable/ic_dialog_dialer"
+        app:profileMisc="1234567890"
+        app:profileMiscIcon="@mipmap/coin"
+        app:profileName="Ino Gamalinda"
+        app:profileSubtitle="ino.gamalinda" />
 
 </android.support.design.widget.CoordinatorLayout>
