--- a/app/src/main/res/layout/list_item_mock.xml
+++ b/app/src/main/res/layout/list_item_mock.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list_item"
-    android:textSize="20sp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingRight="8dp"
-    android:paddingLeft="8dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/list_item"
+        android:textSize="20sp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <View
+        android:id="@+id/separator"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#969696" />
+</LinearLayout>
