--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="#f0f0f0" />
+            android:background="#dcdcdc" />
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
