--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
         app:profileName="Shiba Inu"
         app:profileNameTextSizeSp="20"
         app:profileSubtitle="wow.desu.ne"
+        android:elevation="10dp"
         app:profileSubtitleTextSizeSp="12" />
 
     <LinearLayout
@@ -66,10 +67,12 @@
             android:id="@+id/content_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:background="#dcdcdc" />
+
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
